Solved scrollbars bug. scrollbars were showing after going to any info page, then returning to gallery page.

--- a/css/main.less
+++ b/css/main.less
@@ -188,6 +188,12 @@ li#social-links{
 		overflow:hidden;
 		padding:0px;
 	}
+	&.gallery{
+		overflow:hidden;
+	}
+	&.info{
+		overflow:auto;
+	}
 
 	#about-content{
 		float:left;
